--- a/src/client/src/app/map/map.component.css
+++ b/src/client/src/app/map/map.component.css
@@ -74,3 +74,72 @@ hr {
 .card-header {
 	padding: 10px;
 }
+
+#position {
+  position: absolute; 
+  left: 2%; 
+  top: 6%;
+  width: 315px;
+  height: 200px;
+  background-color: #FFF;
+  color: #666;
+  text-align: left;
+  z-index: 1000;
+  border: 1px solid #525252;
+}
+
+.row-box-name {
+	padding-top: 10px;
+	padding-left: 30px;
+}
+
+.layer-name {
+	font-weight: bold;
+	font-size: 20px;
+}
+
+.layers-options {
+	padding-left: 42px;
+
+}
+
+.layers-indicator {
+	padding-left: 25px;
+	padding-bottom: 30px;
+}
+
+.value-indicators {
+	padding-left: 0px;
+}
+
+.button-row button,
+.button-row a {
+  margin-right: 8px;
+}
+
+.icon-info {
+	font-weight: bold;
+	font-size: 18px;
+	color: black;
+	background-color: #d1d1d1;
+	border-radius: 15px;
+}
+
+.options-radio-button {
+	padding-top: 5%;
+}
+
+.mat-form-field{
+	width: 65px;
+}
+
+.mat-icon-button {
+	width: 20px;
+	height: 20px;
+	line-height: 0px;
+}
+
+..mat-form-field-infix{
+	padding: 0px  !important;
+	border-top: 0px !important;
+}
