--- a/src/client/src/styles.css
+++ b/src/client/src/styles.css
@@ -3,3 +3,95 @@
 @import "./assets/bootstrap/css/bootstrap.css";
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
+.mat-tab-label{
+	min-width: 100px !important;
+	padding: 10px 10px !important;
+}
+
+.mat-mini-fab {
+	width: 35px !important;
+	height: 35px !important;
+	border-radius: 0px !important;
+	background-color: #9cd699 !important;
+}
+
+.mat-slide-toggle-content {
+	font-weight: bold;
+	font-size: 20px;
+}
+
+.chart-legend {
+	padding: 10px !important;
+}
+
+.chart-legend .legend-labels {
+	background: none !important;
+
+}
+
+.chart-legend .legend-label {
+	color: black !important;
+}
+
+.chart-legend .legend-wrap {
+	width: auto !important;
+}
+
+.mat-slide-toggle-content {
+	font-size: 15px !important
+}
+
+.slideEstados.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+  background-color: #33322e !important;
+}
+
+.slideEstados.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+  background-color: #060606ad !important;
+}
+
+.slideMunicipios.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+  background-color: #33322e !important;
+}
+
+.slideMunicipios.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+  background-color: #060606ad !important;
+}
+
+.slideBiomas.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+  background-color: #33322e !important;
+}
+
+.slideBiomas.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+  background-color: #060606ad !important;
+}
+
+.slideTerrasIndigenas.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+  background-color: #7d691e !important;
+}
+
+.slideTerrasIndigenas.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+  background-color: #7d691eb5 !important;
+}
+
+.slideUnidadesConservacao.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+  background-color: #467507 !important;
+}
+
+.slideUnidadesConservacao.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+  background-color: #4675079e !important;
+}
+
+.slideFrigorificos.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+  background-color: #ff0000 !important;
+}
+
+.slideFrigorificos.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+  background-color: #ff000094 !important;
+}
+
+#mat-tab-content-1-0 .mat-tab-body-content {
+	overflow: inherit !important;
+}
+
+
